feat: create delete endpoint
